11-ingress-configmaps-secrets/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels: &id001
      app: web
  template:
    metadata:
      labels: *id001
    spec:
      containers:
      - name: web
        image: nginx:1.28-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 25m
            memory: 16Mi
          limits:
            cpu: 250m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
